fix: undo previous changes for desktop and added small gap on desktop

--- a/components/ContactTimeline/src/_ContactTimelineHeaderToggle.scss
+++ b/components/ContactTimeline/src/_ContactTimelineHeaderToggle.scss
@@ -6,6 +6,12 @@
     --utrecht-button-min-block-size: 0;
     --utrecht-button-max-inline-size: 100%;
 
+    @media (width >= 1024px) {
+      --utrecht-button-max-inline-size: fit-content;
+
+      gap: var(--denhaag-contact-timeline-step-header-toggle-gap);
+    }
+
     justify-content: space-between;
     width: 100%;
   }
